--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -288,8 +288,9 @@ section {
 }
 
 .header .logo img {
-  max-height: 40px;
+  max-height: 18vh;
   margin-right: 6px;
+  filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(0, 0, 0, 0.5));
 }
 
 .header .logo h1 {
