--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,6 +11,15 @@
 # Learn more about CSS variables at https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties
 --------------------------------------------------------------*/
 /* Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+@font-face {
+  font-family: thisFont;
+  src: url(/assets/fonts/Break\ Brush.ttf);
+}
+
 :root {
   --font-default: "Open Sans", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --font-primary: "Amatic SC", sans-serif;
@@ -273,7 +282,6 @@ section {
   transition: all 0.5s;
   z-index: 997;
   height: 90px;
-  border-bottom: 1px solid #fff;
 }
 
 @media (max-width: 575px) {
@@ -325,6 +333,10 @@ section {
 /*--------------------------------------------------------------
 # Desktop Navigation
 --------------------------------------------------------------*/
+
+
+
+
 @media (min-width: 1280px) {
   .navbar {
     padding: 0;
@@ -1503,6 +1515,48 @@ section {
   }
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.badge-text {
+  font-size: 16px;
+  font-family: "Bebas Neue", sans-serif;
+  margin-left: 10px;
+  font-weight: 500;
+  margin-top: 7px;
+}
+
+.badge-img {
+  height: 30vh;
+  margin-left: 36px;
+}
+
+.badge-def {
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 26px;
+  margin-top: 1rem;
+}
+.badge-para {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+}
+
+
+
+
+
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
@@ -1510,9 +1564,33 @@ section {
   width: 100%;
   background-size: cover;
   position: relative;
-  min-height: 60vh;
-  padding: 160px 0 1px 0;
 }
+
+.hero-title {
+  font-size: 64px;
+  font-weight: 400;
+  color: white;
+  font-family: thisFont;
+  -webkit-text-stroke: 1px rgb(3, 3, 3);
+  position: absolute;
+  top: 25%;
+  left: 54%;
+  transform: translate(-50%, -10%);
+  font-size: clamp(30px, 6vw, 68px);
+}
+
+
+@media screen and (max-width: 325px) {
+  .hero-title {
+    width: 70%;
+    font-size: clamp(25px, 5vw, 48px);
+    margin-top: 2rem;
+  }
+  .hero img {
+    margin-top: 5rem !important;
+  }
+}
+
 
 .hero h2 {
   font-size: 64px;
@@ -1740,7 +1818,7 @@ section {
 
 .credentials-box p {
   font-size: 1.5vw; /* Use viewport width units for responsiveness */
-  margin-top: 10px;
+  margin-top: 10px
 }
 
 .heros-text-box,
@@ -1752,11 +1830,13 @@ section {
     background-color: rgba(0, 0, 0, 0.8); /* Add a dark overlay for better text visibility */
     padding: 10px 20px;
     margin-top: 10px;
-    width: 80%; /* Set a width for the box */
+    width: 80%; 
     border-radius: 8px;
 }
 
 .heros-text-box {
+   display: flex;
+   display: block;
     top: 47%;
     width: 30%;
 }
@@ -1766,11 +1846,11 @@ section {
     width: 60%;
 }
 
-.heros-text-box p,
-.credentials-box p {
+.heros-text-box h3,
+.credentials-box h3 {
   font-size: clamp(10px, 2vw, 18px);
   color: white;
-  font-weight: 600;
+  font-weight: 700;
 }
 
 /* Loading logo styles */
@@ -1797,4 +1877,95 @@ section {
 @keyframes scale {
   0%, 100% { transform: scale(1); }
   50% { transform: scale(1.1); }
+}
+
+
+
+/* Media Queries for Hero Section */
+
+@media (min-width: 1200px) {
+  .badge-text {
+    margin-left: 4.2rem;
+    font-weight: 500;
+    font-size: 18px;
+  }
+}
+
+
+@media screen and (max-width: 1200px) {
+  .heros-text-box,
+  .credentials-box {
+    margin-top: 6rem;
+  }
+  .badge-text {
+    margin-left: 1rem;
+  }
+}
+
+@media screen and (max-width: 920px) {
+  .heros-text-box h3,
+  .credentials-box h3 {
+    font-size: clamp(6px, 2vw, 10px);
+    font-weight: 600;
+  }
+}
+
+
+@media screen and (max-width: 426px) {
+  .heros-text-box h3,
+  .credentials-box h3 {
+    font-size: clamp(4px, 1vw, 6px);
+    font-weight: 600;
+  }
+
+  .credentials-box {
+    width: 30%;
+}
+
+.badge-img {
+  margin-top: 2.5rem;
+}
+
+.badge-text {
+  margin-top: 2rem;
+}
+
+
+.badge-img {
+  margin-left: 1rem;
+}
+.badge-para {
+  font-size: 9px;
+}
+
+}
+
+@media screen and (max-width: 376px) {
+  .hero-title {
+    width: 70%;
+    font-size: clamp(25px, 5vw, 48px);
+    margin-top: 2rem;
+  }
+  .hero img {
+    margin-top: 5rem !important;
+  }
+  .heros-text-box,
+  .credentials-box {
+    margin-top: 4rem;
+    font-size: clamp(8px, 2vw, 10px);
+    padding: 6px 18px;
+    margin-top: 4rem;
+  }
+  .badge-img {
+    margin-left: 1.6rem;
+    margin-top: 2px;
+  }
+  .badge-text {
+    margin-top: 2rem;
+  }
+
+  .badge-para {
+    font-size: 6px;
+  }
+
 }
