--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,6 +11,8 @@
 # Learn more about CSS variables at https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties
 --------------------------------------------------------------*/
 /* Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Jersey+10&family=New+Amsterdam&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
@@ -74,7 +76,7 @@ h6 {
 --------------------------------------------------------------*/
 section {
   overflow: hidden;
-  padding: 80px 0;
+  padding: 0px 0;
   scroll-margin-top: 90px;
   overflow: clip;
 }
@@ -85,7 +87,7 @@ section {
 
 .section-header {
   text-align: center;
-  padding-bottom: 30px;
+  padding-bottom: 20px;
 }
 
 .section-header h2 {
@@ -276,6 +278,7 @@ section {
   [data-aos-delay] {
     transition-delay: 0 !important;
   }
+  
 }
 
 /*--------------------------------------------------------------
@@ -383,6 +386,10 @@ section {
     font-size: 12px;
     line-height: 0;
     margin-left: 5px;
+  }
+  .about {
+    margin-bottom: 30px;
+    margin-top: 20px;
   }
 
   .navbar>ul>li>a:before {
@@ -1669,6 +1676,47 @@ section {
   }
 }
 
+
+.adv-title {
+  text-align: center;
+  font-family: "Bebas Neue", sans-serif;
+  font-size: clamp(8px, 1vw, 22px);
+}
+
+.adv-title h2 {
+  font-family: "Bebas Neue", sans-serif;
+  font-size: clamp(14px, 3vw, 30px);
+}
+.adv-para {
+  margin: auto;
+  width: 75%;
+}
+.adv-para h6 {
+  font-family: "Poppins", sans-serif;
+  font-size: clamp(4px, 2vw, 19px);
+  font-weight: 400;
+}
+.join-prgm h3 {
+  font-family: "Jersey 10", sans-serif !important;
+  color: #fff;
+  text-align: center;
+  font-size: clamp(14px, 3vw, 30px);
+}
+
+
+.about-para {
+  margin: auto;
+  width: 80%;
+  margin-bottom: -8;
+}
+
+.about-para h6 {
+  font-family: "Poppins", sans-serif;
+  font-size: clamp(4px, 2vw, 19px);
+  font-weight: 400;
+}
+
+
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
@@ -1792,8 +1840,8 @@ section {
 .credentials {
   font-size: 0.9em;
   margin-top: 10px;
+  color: #fff;
 }
-
 .content {
   padding: 20px;
 }
@@ -1824,11 +1872,11 @@ section {
 
 .credentials-box p {
   font-size: 1.5vw; /* Use viewport width units for responsiveness */
-  margin-top: 10px
+  margin-top: 10px;
+  color: #fff;
 }
 
-.heros-text-box,
-.credentials-box {
+.heros-text-box {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
@@ -1838,6 +1886,15 @@ section {
     margin-top: 10px;
     width: 80%; 
     border-radius: 8px;
+}
+.credentials-box {
+  position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    margin-top: 10px;
+    border-radius: 8px;
+    margin-top: 20%;
 }
 
 .heros-text-box {
@@ -1849,7 +1906,6 @@ section {
 
 .credentials-box {
     top: 50%;
-    width: 60%;
 }
 
 .heros-text-box h3,
@@ -1903,7 +1959,7 @@ section {
 @media screen and (max-width: 1200px) {
   .heros-text-box,
   .credentials-box {
-    margin-top: 6rem;
+    margin-top: 5rem;
   }
   .badge-text {
     margin-left: 1rem;
@@ -1919,6 +1975,9 @@ section {
   .anim-title {
     height: 7vh;
   }
+  .join-prgm {
+    height: 3vh;
+  }
 }
 
 
@@ -1930,7 +1989,8 @@ section {
   }
 
   .credentials-box {
-    width: 30%;
+    width: 70%;
+    margin-top: 6rem !important;
 }
 
 .badge-img {
@@ -1954,6 +2014,9 @@ section {
 }
 .anim-title {
   height: 7vh;
+}
+.join-prgm {
+  height: 3vh;
 }
 
 .hero-title {
@@ -2005,6 +2068,24 @@ section {
   }
 
 }
+
+
+
+
+
+@media screen and (max-width: 390px) {
+  .badge-img {
+    height: 30vh;
+    margin-left: 5px;
+  }
+
+  .content {
+    font-size: 4vw;
+  }
+
+}
+}
+
 
 
 
@@ -2071,16 +2152,10 @@ section {
   99.66%, 100% { transform: translate3d(0, -200%, 0); }
 }
 
-
-
-@media screen and (max-width: 390px) {
-  .badge-img {
-    height: 30vh;
-    margin-left: 5px;
-  }
-
-  .content {
-    font-size: 4vw;
-  }
-
+@media (min-width: 768px) {
+   .credentials-box {
+    width: 70%;
+    margin-top: 8rem !important;
+}
+  
 }
