--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,6 +11,8 @@
 # Learn more about CSS variables at https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties
 --------------------------------------------------------------*/
 /* Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Acme&family=Bebas+Neue&family=Jersey+10&family=Montserrat:ital,wght@0,100..900;1,100..900&family=New+Amsterdam&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @import url('https://fonts.googleapis.com/css2?family=Acme&family=Bebas+Neue&family=Jersey+10&family=New+Amsterdam&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Jersey+10&family=New+Amsterdam&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@@ -825,6 +827,9 @@ section {
   .why-us .icon-box:hover {
     transform: scale(1.1);
   }
+  .icon-prgms {
+    margin-left: 15rem;
+  }
 }
 
 /*--------------------------------------------------------------
@@ -1529,20 +1534,6 @@ section {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .badge-text {
   font-size: 16px;
   font-family: "Bebas Neue", sans-serif;
@@ -1730,7 +1721,10 @@ section {
 }
 
 
-.
+.new-para {
+  font-family: "Poppins", sans-serif;
+  font-size: 14px;
+}
 
 
 /*--------------------------------------------------------------
@@ -1960,16 +1954,19 @@ section {
 }
 
 .icon-prgms {
-  height: 9vh;
+  height: 20vh;
 }
+
+
 
 .prgm-title {
   display: flex;
   align-items: center;
 }
-.prgm-title h2 {
-  font-family: "Acme", sans-serif;
 
+.prgm-para h2 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
 }
 
 .prgm-para p {
@@ -2033,6 +2030,9 @@ section {
 
 .badge-img {
   margin-top: 2.5rem;
+}
+.icon-prgms {
+  margin-left: 20%;
 }
 
 .badge-text {
@@ -2277,5 +2277,16 @@ section {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .accordion-header {
-  font-family: "Bebas Neue", sans-serif;
+  font-family: "Poppins", sans-serif;
+  font-weight: 900;
+  -webkit-text-stroke-width: 0.6px;
+  -webkit-text-stroke-color: black;
+}
+
+
+@media screen and (max-width: 396px) {
+  .badge-img {
+    height: 30vh;
+    margin-left: 6px;
+  }
 }
